flac files don't play because of supposed "bad header"
Submitted by Trolli Schmittlauch
Link to original bug (#796617)
Description
gstreamer refuses to play certain flac files, complaining them to have bad headers:
$ gst-play-1.0 ~/Musik/CC-Musik/Electro/Mizukis\ Last\ Chance/Mizukis\ Last\ Chance\ -\ Holy\ Bleep/Mizuki\'s\ Last\ Chance\ -\ Holy\ Bleep\ -\ 01\ Holy\ Bleep.flac
Press 'k' to see a list of keyboard shortcuts.
Now playing /home/spiollinux/Musik/CC-Musik/Electro/Mizukis Last Chance/Mizukis Last Chance - Holy Bleep/Mizuki's Last Chance - Holy Bleep - 01 Holy Bleep.flac
ERROR Could not decode stream. for file:///home/spiollinux/Musik/CC-Musik/Electro/Mizukis%20Last%20Chance/Mizukis%20Last%20Chance%20-%20Holy%20Bleep/Mizuki's%20Last%20Chance%20-%20Holy%20Bleep%20-%2001%20Holy%20Bleep.flac
ERROR debug information: /tmp/portage/media-plugins/gst-plugins-flac-1.12.4/work/gst-plugins-good-1.12.4/ext/flac/gstflacdec.c(528): gst_flac_dec_error_cb (): /GstPlayBin:playbin/GstURIDecodeBin:uridecodebin0/GstDecodeBin:decodebin0/GstFlacDec:flacdec0:
bad header (1)
Reached end of play list.
flac -t
shows no errors on them though and other players like vlc can play the files without any problems.
I didn't encode the file myself so I can't say with which software or parameters they have been created. But as the song is released under Creative Commons, I can post a link to it: https://files.orlives.de/pub/Mizuki%27s%20Last%20Chance%20-%20Holy%20Bleep%20-%2001%20Holy%20Bleep.flac
software versions:
gstreamer-1.12.4
gst-plugins-good-1.12.4
gst-plugins-flac-1.12.4
flac-1.3.2
distribution: Gentoo Linux x86_64
Version: 1.x